# master-tracker

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/deckfetch/: CMakeLists.txt  main.cpp
src/deckstring/: CMakeLists.txt  main.cpp
src/examples/: CMakeLists.txt  example.cpp
src/gui/: CMakeLists.txt  deckwindow.cpp  deckwindow.hpp  deckwindow.ui  enemywindow.cpp  enemywindow.hpp  enemywindow.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  overlay.hpp  playwindow.cpp  playwindow.hpp  playwindow.ui  styleitemdelegate.hpp
src/gui/unix/: overlay.cpp
src/gui/widgets/: carddateitem.cpp  carddateitem.hpp  carddetailwidget.cpp  carddetailwidget.hpp  carddetailwidget.ui  cardiconitem.cpp  cardiconitem.hpp  cardlistwidget.cpp  cardlistwidget.hpp  cardlistwidget.ui  cardnameitem.cpp  cardnameitem.hpp  cardnumitem.cpp  cardnumitem.hpp  decklistwidget.cpp  decklistwidget.hpp  decklistwidget.ui  decknameitem.cpp  decknameitem.hpp  deckwidget.cpp  deckwidget.hpp  deckwidget.ui  filterwidget.cpp  filterwidget.hpp  tablewidgetitems.hpp
src/gui/win32/: overlay.cpp
src/hsdata/: CMakeLists.txt  card.cpp  card.hpp  cardmap.cpp  cardmap.hpp  conv.cpp  conv.hpp  deck.cpp  deck.hpp  deckcard.cpp  deckcard.hpp  deckstring.cpp  deckstring.hpp  playcard.cpp  playcard.hpp  player.cpp  player.hpp  types.hpp
src/hsjson/: CMakeLists.txt  jsoncard.cpp  jsoncard.hpp  jsondl.cpp  jsondl.hpp  locale.hpp
src/hsmng/: CMakeLists.txt  constant.hpp  dbmanager.cpp  dbmanager.hpp  gamemanager.cpp  gamemanager.hpp  gamewatcher.cpp  gamewatcher.hpp  logworker.cpp  logworker.hpp  settings.cpp  settings.hpp  sqlquery.hpp
src/hsms/: CMakeLists.txt  player.cpp  player.hpp
src/hsrender/: CMakeLists.txt  context.cpp  context.hpp  render_utils.hpp  renderobj.hpp  scene.cpp  scene.hpp  scenecard.hpp  scenecardtile.hpp
src/hsrender_app/: CMakeLists.txt  main.cpp
src/monospace/: CMakeLists.txt  monoclass.cpp  monoclass.hpp  monofield.cpp  monofield.hpp  monospace.cpp  monospace.hpp  monotype.hpp  monovalue.cpp  monovalue.hpp  offset.hpp  process.hpp  vmread.hpp
src/monospace/unix/: process.cpp  vmread.cpp
src/monospace/win32/: process.cpp  vmread.cpp
src/monospace_app/: CMakeLists.txt  main.cpp
src/plugins/: CMakeLists.txt
src/tests/: CMakeLists.txt
src/tests/hsdata/: CMakeLists.txt  playcard_list.cpp  read_deckstring.cpp  read_deckstring_name.cpp  read_deckstring_page.cpp  sort_cost_less.cpp  sort_cost_more.cpp  sort_name_less.cpp  write_deckstring.cpp  write_deckstring_page.cpp
src/tests/hsjson/: CMakeLists.txt  download_file.cpp  download_image.cpp  download_image_list.cpp  download_tile.cpp  download_tile_list.cpp  query_all.cpp  query_deck.cpp  query_std_charge.cpp  read_file.cpp
src/tests/hsmng/: CMakeLists.txt  gamemanager_init.cpp
src/tests/monospace/: CMakeLists.txt  find_assembly.cpp  find_module.cpp  find_root_domain.cpp  get_pid.cpp  load_class_list.cpp
src/utils/: CMakeLists.txt  b64.h  error.hpp  utils.hpp
